# zeebulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  PHASE8_LOG.md  PRD.md  README.md  TASKS.md
.github/workflows/: ci.yml
core/: CMakeLists.txt  backend.h  core.cpp  core.h
core/audio/: mixer.cpp  mixer.h
core/brew/: file_hle.cpp  file_hle.h  font5x7.cpp  font5x7.h  gl_backend.h  gl_hle.cpp  gl_hle.h  gl_types.h  hle_runtime.cpp  hle_runtime.h  idisplay.cpp  idisplay.h  interface_object.cpp  interface_object.h  ishell.cpp  ishell.h  media_hle.cpp  media_hle.h  mod_runtime.cpp  mod_runtime.h  scaffold_object.cpp  scaffold_object.h  virtual_filesystem.cpp  virtual_filesystem.h
core/cpu/: arm_core.h  arm_interpreter.cpp  arm_interpreter.h
core/loader/: ggz.cpp  ggz.h  midi.cpp  midi.h  mif.cpp  mif.h  mod.cpp  mod.h  obm1.cpp  obm1.h  pkg.cpp  pkg.h  wav.cpp  wav.h
core/memory/: memory.cpp  memory.h
frontends/libretro/: CMakeLists.txt  libretro_core.cpp
frontends/standalone/: CMakeLists.txt  main.cpp  sdl2_backend.cpp  sdl2_backend.h  sdl2_gl_backend.cpp  sdl2_gl_backend.h
tests/: CMakeLists.txt  brew_lifecycle_test.cpp  brew_test.cpp  core_test.cpp  cpu_test.cpp  file_hle_test.cpp  font5x7_test.cpp  ggz_test.cpp  gl_hle_test.cpp  gl_lifecycle_test.cpp  hle_runtime_test.cpp  media_hle_test.cpp  memory_test.cpp  midi_test.cpp  mif_test.cpp  mixer_test.cpp  mod_runtime_test.cpp  mod_test.cpp  obm1_test.cpp  pkg_test.cpp  scaffold_object_test.cpp  thumb_test.cpp  virtual_filesystem_test.cpp  wav_test.cpp
tests/fixtures/: README_test_tone.md  README_test_tune.md  test_tune.mid
tests/fixtures/hello_brew/: README.md  entry_offset.h  hello_brew.c
tests/fixtures/hello_gl/: README.md  entry_offset.h  hello_gl.c
tools/: CMakeLists.txt  cpu_demo.cpp  game_probe.cpp  ggz_inspector.cpp  mif_inspector.cpp  mod_probe.cpp  obm1_inspector.cpp  pkg_inspector.cpp
