add_executable(zeebulator_cpu_demo cpu_demo.cpp)
target_link_libraries(zeebulator_cpu_demo PRIVATE zeebulator_core)

add_executable(zeebulator_ggz_inspector ggz_inspector.cpp)
target_link_libraries(zeebulator_ggz_inspector PRIVATE zeebulator_core)

add_executable(zeebulator_mif_inspector mif_inspector.cpp)
target_link_libraries(zeebulator_mif_inspector PRIVATE zeebulator_core)

add_executable(zeebulator_mod_probe mod_probe.cpp)
target_link_libraries(zeebulator_mod_probe PRIVATE zeebulator_core)
